welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {

var isNine = false;
var searchArea = 4;
	if(nums.lenth <= 4)
	{
		searchArea = nums.length;
	}

	for(i <- 0 to searchArea - 1)
	{
		if(nums(i) == 9)
		{
			isNine = true;
		}
	}

		return true;
}
